Fix null-friendly input construction in RepoTransformsTest